--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/byr-gdp/v2ex-plugin#readme",
   "dependencies": {
+    "babel-preset-es2015": "^6.22.0",
+    "node-fetch": "^1.6.3",
     "request": "^2.67.0"
   }
 }
